apps/linkwarden/overlays/understairs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
  hostnames:
    - bookmarks.homelab.blacksd.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkwarden
          port: 80
